AlphaBlack theme.config cleanup

--- a/src/Presentation/SmartStore.Web/Themes/AlphaBlack/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/AlphaBlack/theme.config
@@ -2,40 +2,30 @@
 <Theme baseTheme="Alpha" title="Alpha Black" supportRTL="false" mobileTheme="false" previewText="The 'Alpha Black' shop theme." author="SmartStore AG" version="1.0">
 
   <Vars>
+  	<!-- Common Colors -->
 	<Var name="SiteBackground" type="Color">#666</Var>
 	<Var name="TextColor" type="Color">#555</Var>
 	<Var name="LinkColor" type="Color">#000</Var>
+	
+	<!-- Common Headings -->
 	<Var name="PageTitleColor" type="Color">#464646</Var>
-	<Var name="TableBackground" type="Color">transparent</Var>
+	
+	<!-- Tables-->
 	<Var name="TableBackgroundAccent" type="Color">#f0f0f0</Var>
 	<Var name="TableBackgroundHover" type="Color">#f5f5f5</Var> 
-	<Var name="TableBorder" type="Color">#ddd</Var> 
+	
+	<!-- Buttons -->
 	<Var name="BtnBackground" type="Color">#646464</Var>
-	<Var name="BtnBackgroundHighlight" type="Color">#464646</Var> 
-	<Var name="BtnColor" type="Color">#fff</Var>
 	<Var name="BtnPrimaryBackground" type="Color">#0074cc</Var>
-	<Var name="BtnPrimaryBackgroundHighlight" type="Color">#0055cc</Var> 
-	<Var name="BtnPrimaryColor" type="Color">#fff</Var> 
-	<Var name="BtnInfoBackground" type="Color">#5bc0de</Var>
-	<Var name="BtnInfoBackgroundHighlight" type="Color">#2f96b4</Var>
-	<Var name="BtnInfoColor" type="Color">#fff</Var> 
-	<Var name="BtnSuccessBackground" type="Color">#62c462</Var>
-	<Var name="BtnSuccessBackgroundHighlight" type="Color">#51a351</Var>
-	<Var name="BtnSuccessColor" type="Color">#fff</Var>
 	<Var name="BtnWarningBackground" type="Color">#9ABB69</Var>
-	<Var name="BtnWarningBackgroundHighlight" type="Color">#61950B</Var>
-	<Var name="BtnWarningColor" type="Color">#fff</Var> 
-	<Var name="BtnDangerBackground" type="Color">#ee5f5b</Var>
-	<Var name="BtnDangerBackgroundHighlight" type="Color">#bd362f</Var>
-	<Var name="BtnDangerColor" type="Color">#fff</Var>
-	<Var name="BtnInverseBackground" type="Color">#444</Var>
-	<Var name="BtnInverseBackgroundHighlight" type="Color">#333</Var>
-	<Var name="BtnInverseColor" type="Color">#fff</Var>
+	
+	<!-- Shopbar -->
 	<Var name="ShopBarBackgroundColor" type="Color">#000</Var>
 	<Var name="ShopBarBorderColor" type="Color">#ccc</Var>
 	<Var name="ShopBarTextColor" type="Color">#fff</Var>
 	<Var name="ShopBarIconColor" type="Color">#fff</Var>
-	<Var name="ShopBarLabel" type="Select#ShopBarLabels">label-info</Var>
+	
+	<!-- Megamenu -->
 	<Var name="InverseNavbar" type="Boolean">true</Var>
 	<Var name="NavbarHeight" type="String">42px</Var>
 	<Var name="NavbarBackgroundHighlight" type="Color">#fff</Var>
@@ -44,12 +34,13 @@
 	<Var name="NavbarLinkColorHover" type="Color">#1a1a1a</Var>
 	<Var name="NavbarLinkColorActive" type="Color">#555</Var>
 	<Var name="NavbarInverseBackground" type="Color">#111</Var>
-	<Var name="NavbarInverseBackgroundHighlight" type="Color">#666</Var>
 	<Var name="NavbarInverseBorder" type="Color">#333</Var>
 	<Var name="NavbarInverseText" type="Color">#dadada</Var>
 	<Var name="NavbarInverseLinkColor" type="Color">#fff</Var>
 	<Var name="NavbarInverseLinkColorHover" type="Color">#e0f9ff</Var>
 	<Var name="NavbarInverseLinkColorActive" type="Color">#fff</Var>
+	
+	<!-- Header -->
 	<Var name="HeaderLinkColor" type="Color">#eee</Var>
 	<Var name="HeaderHoverColor" type="Color">#fff</Var>
 	<Var name="HeaderIconColor" type="Color">#bbb</Var>
@@ -57,53 +48,47 @@
 	<Var name="ChooserBackgroundColor" type="Color">#efefef</Var>
 	<Var name="ChooserActiveStateColor" type="Color">#bbb</Var>
 	<Var name="ChooserFontColor" type="Color">#464646</Var>
+	
+	<!-- Footer -->
 	<Var name="FooterBackground" type="Color">#ddd</Var>
 	<Var name="FooterHeading" type="Color">#444</Var>
 	<Var name="FooterFontColor" type="Color">#444</Var>
 	<Var name="FooterLinkColor" type="Color">#444</Var>
 	<Var name="FooterRadius" type="String">0 0 9px 9px</Var>
-	<Var name="ContainerBackground" type="Color">#fff</Var>
+	
+	<!-- Container -->
 	<Var name="ContainerBorder" type="Color">#464646</Var>
 	<Var name="ContainerRadius" type="String">9px</Var>
-	<Var name="ContainerBodyLinkColor" type="Color">#888</Var>
 	<Var name="ContainerHeaderBackground" type="Color">#333</Var>
 	<Var name="ContainerHeaderFontColor" type="Color">#fff</Var>
 	<Var name="ContainerHeaderHeight" type="String">27px</Var>
 	<Var name="ContainerBodyBackground" type="Color">#efefef</Var>
 	<Var name="ContainerBodyFontColor" type="Color">#555</Var>
+	
+	<!-- Misc -->
 	<Var name="WellBackground" type="Color">#efefef</Var>
 	<Var name="ItemBoxBoxShadowColor" type="Color">#999</Var>
 	<Var name="SimpleBoxHeaderColor" type="Color">#ddd</Var>
-	<Var name="SliderUseRadialBg" type="Boolean">true</Var>
-	<Var name="SliderBackgroundColor" type="Color">#2786ce</Var>
-	<Var name="SliderTitleColor" type="Color">#fff</Var>
-	<Var name="SliderTitleFontFamily" type="String">'Segoe UI Light', 'Segoe UI', Arial, sans-serif</Var>
-	<Var name="SliderTitleFontWeight" type="String">100</Var>
-	<Var name="SliderInfoColor" type="Color">#fff</Var>
-	<Var name="SliderInfoFontFamily" type="String">inherit</Var>
-	<Var name="SliderInfoFontWeight" type="String">inherit</Var>
+	
+	<!-- Slider -->
+	
+	<!-- Paginator -->
 	<Var name="PaginationBackground" type="Color">#efefef</Var>
 	<Var name="PaginationBorder" type="Color">#464646</Var>
 	<Var name="PaginationActiveBackground" type="Color">#ccc</Var>
-	<Var name="GridSettings" type="Select#GridSettings">5/14/5</Var>
-	<Var name="GridColumnWidth" type="String">20px</Var>
-	<Var name="GridGutterWidth" type="String">20px</Var>
+	
+	<!-- Layout -->
 	<Var name="GridColumnWidth1200" type="String">30px</Var>
 	<Var name="GridGutterWidth1200" type="String">20px</Var>
-	<Var name="InputBackground" type="Color">#fff</Var>
-	<Var name="InputBorder" type="Color">#ccc</Var>
-	<Var name="InputBorderRadius" type="String">5px</Var>
-	<Var name="InputDisabledBackground" type="Color">#eee</Var>
-	<Var name="FormActionsBackground" type="Color">#f5f5f5</Var>
+	
+	<!-- Forms -->
+	<Var name="InputBorderRadius" type="String">4px</Var>
+	
+	<!-- Dropdowns -->
 	<Var name="DropdownBackground" type="Color">#efefef</Var>
 	<Var name="DropdownBorder" type="Color">#d9e1ff</Var>
 	<Var name="DropdownDividerTop" type="Color">#fff</Var>
 	<Var name="DropdownDividerBottom" type="Color">#a35858</Var>
-	<Var name="DropdownLinkColor" type="Color">#333</Var>
-	<Var name="DropdownLinkColorHover" type="Color">#fff</Var>
-	<Var name="DropdownLinkColorActive" type="Color">#fff</Var>
-	<Var name="DropdownLinkBackgroundActive" type="Color">#f9980f</Var>
-	<Var name="DropdownLinkBackgroundHover" type="Color">#f9980f</Var>
   </Vars>
     
 </Theme>
