Theme inheritance (Final). NOTE: please perform a migrations downgrade to 'NewRes' in order to get the newest resource strings.

--- a/src/Presentation/SmartStore.Web/Web.Release.config
+++ b/src/Presentation/SmartStore.Web/Web.Release.config
@@ -3,7 +3,10 @@
 <!-- For more information on using web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-	<system.web>
+  <appSettings>
+    <add key="sm:MonitorThemesFolder" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+  </appSettings>
+  <system.web>
 	  <compilation xdt:Transform="RemoveAttributes(debug)" />
     <compilation xdt:Transform="RemoveAttributes(numRecompilesBeforeAppRestart)" />
     <compilation batch="true" optimizeCompilations="false" xdt:Transform="SetAttributes(batch,optimizeCompilations)" />
