--- a/src/Presentation/SmartStore.Web/Themes/AlphaBlue/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/AlphaBlue/theme.config
@@ -3,7 +3,7 @@
 
   <Vars>
 	<!-- Common Colors -->
-	<Var name="SiteBackground" type="Color">#DFE7EE</Var> 
+	<Var name="SiteBackground" type="Color">#dfe7ee</Var> 
 	<Var name="BodyBackground" type="Color">#F7F9FB</Var>
 	<Var name="TextColor" type="Color">#555</Var>
 	<Var name="LinkColor" type="Color">#003366</Var> 
