Spliited main theme's "site.less" into many smaller files. This way creating child themes is really fun ;-)

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
@@ -1,11 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<Theme title="Alpha" 
-	   supportRTL="false"
-	   mobileTheme="false"
-     previewImageUrl="~/Themes/Alpha/preview.png"
-     previewText="The primary 'Alpha' shop theme."
-     author="SmartStore AG"
-     version="1.4">
+<Theme title="Alpha" supportRTL="false" mobileTheme="false" previewText="The primary 'Alpha' shop theme." author="SmartStore AG" version="2.0">
 
   <Vars>
     <!-- Common Colors -->
@@ -24,7 +18,7 @@
     
     <!-- Common Headings -->
     <Var name="HeadingsFontFamily" type="String">'Segoe UI Semibold', 'Segoe UI', Tahoma, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'</Var>
-    <Var name="HeadingsFontWeight" type="String">100</Var>
+    <Var name="HeadingsFontWeight" type="String">600</Var>
     <Var name="HeadingsColor" type="Color">inherit</Var>
 
     <Var name="PageTitleFontFamily" type="String">'Segoe UI Light', 'Segoe UI', Arial, Helvetica, 'sans-serif'</Var>
