Correction of my last commit

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -85,7 +85,7 @@
     <add key="sm:PluginsIgnoredDuringInstallation" value="SmartStore.DemoShopControlling, SmartStore.WebApi, SmartStore.Glimpse, SmartStore.DevTools" />
   </appSettings>
   
-  <location path="SmartStore/SmartStore.BizImporter">
+  <location path="Plugins/SmartStore.BizImporter">
     <system.web>
       <httpRuntime maxRequestLength="1536000" executionTimeout="14400" maxQueryStringLength="16384" />
     </system.web>
