Implemented 'Preview Mode' for Themes & Stores (IMPORTANT: downgrade the EF Migrations to 'NewRes' prior starting the app)

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -195,9 +195,13 @@
     <Compile Include="Migrations\201410091620122_NewRes.Designer.cs">
       <DependentUpon>201410091620122_NewRes.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201411071645389_V21Final.cs" />
-    <Compile Include="Migrations\201411071645389_V21Final.Designer.cs">
-      <DependentUpon>201411071645389_V21Final.cs</DependentUpon>
+    <Compile Include="Migrations\201411182201537_EuEsd.cs" />
+    <Compile Include="Migrations\201411182201537_EuEsd.Designer.cs">
+      <DependentUpon>201411182201537_EuEsd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201411182202431_V21Final.cs" />
+    <Compile Include="Migrations\201411182202431_V21Final.Designer.cs">
+      <DependentUpon>201411182202431_V21Final.cs</DependentUpon>
     </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
@@ -400,8 +404,11 @@
     <EmbeddedResource Include="Migrations\201410091620122_NewRes.resx">
       <DependentUpon>201410091620122_NewRes.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201411071645389_V21Final.resx">
-      <DependentUpon>201411071645389_V21Final.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201411182201537_EuEsd.resx">
+      <DependentUpon>201411182201537_EuEsd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201411182202431_V21Final.resx">
+      <DependentUpon>201411182202431_V21Final.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
