--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -1532,6 +1532,10 @@
     <Content Include="Content\Images\star-off.png" />
     <Content Include="Content\Images\star-on-12.png" />
     <Content Include="Content\Images\star-on.png" />
+    <Content Include="Themes\Alpha\Content\images\star-off-12.png" />
+    <Content Include="Themes\Alpha\Content\images\star-off.png" />
+    <Content Include="Themes\Alpha\Content\images\star-on-12.png" />
+    <Content Include="Themes\Alpha\Content\images\star-on.png" />
     <Content Include="Themes\Alpha\Content\slider.less" />
     <Content Include="Content\bootstrap\custom\telerik\editor.png" />
     <Content Include="Content\bootstrap\custom\telerik\gradient.png" />
