--- a/src/Presentation/SmartStore.Web/Themes/Web.config
+++ b/src/Presentation/SmartStore.Web/Themes/Web.config
@@ -12,6 +12,7 @@
       <add name="LessAssetHandler" path="*.less" verb="GET" type="SmartStore.Web.Framework.Themes.LessCssHttpHandler, SmartStore.Web.Framework" resourceType="File" preCondition="" />
 	  
 	    <!-- theme file inheritance -->
+      <add name="StaticFileHandler-png" path="*.png" verb="GET,HEAD" type="System.Web.StaticFileHandler"/>
       <add name="StaticFileHandler-gif" path="*.gif" verb="GET,HEAD" type="System.Web.StaticFileHandler"/>
       <add name="StaticFileHandler-jpg" path="*.jpg" verb="GET,HEAD" type="System.Web.StaticFileHandler"/>
       <add name="StaticFileHandler-jpeg" path="*.jpeg" verb="GET,HEAD" type="System.Web.StaticFileHandler"/>
