--- a/src/Presentation/SmartStore.Web/Administration/packages.config
+++ b/src/Presentation/SmartStore.Web/Administration/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.4.1" targetFramework="net45" />
+  <package id="Autofac.Mvc5" version="3.3.1" targetFramework="net45" />
   <package id="AutoMapper" version="3.2.1" targetFramework="net45" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net45" />
   <package id="jQuery" version="1.8.3" targetFramework="net45" />
