Use V8JsEngine in release build

--- a/src/Presentation/SmartStore.Web/Web.Release.config
+++ b/src/Presentation/SmartStore.Web/Web.Release.config
@@ -3,6 +3,11 @@
 <!-- For more information on using web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+  <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
+    <less>
+      <jsEngine name="V8JsEngine" xdt:Transform="SetAttributes(name)" />
+    </less>
+  </bundleTransformer>
   <appSettings>
     <add key="sm:MonitorThemesFolder" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
