--- a/src/Presentation/SmartStore.Web/Administration/packages.config
+++ b/src/Presentation/SmartStore.Web/Administration/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="Autofac" version="3.4.1" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="3.3.1" targetFramework="net45" />
   <package id="AutoMapper" version="3.2.1" targetFramework="net45" />
@@ -8,8 +9,10 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor.de" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.de" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
